--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 	color: white;
 }
 
+body {
+	background-color: white;
+}
+
 .header {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
 		url('./Images/PublicImages/image-2.jpg');
